--- a/index.html
+++ b/index.html
@@ -7,5 +7,56 @@
 </head>
 <body>
     
+    <style>
+        
+        body{
+            width: 100%;
+            height: 100vh;
+            background-color: rgb(114, 16, 16);
+        }
+
+        nav{
+            background-color: rgba(255, 0, 0, 0.718);
+            padding: 15px;
+            margin: 10px 10px;
+            text-align: center;
+            height: 50px;
+            display: flex;
+            align-items: center;
+            position: sticky;
+            top:10px;
+
+        }
+
+        .Navbar_Link{
+            display: flex;
+            justify-content: end;
+            width: 100%;
+            gap: 50px;
+        }
+
+        .Navbar_Link a{
+            color: #000;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        }
+        .Navbar_Link a:hover{
+            color: #ffbcbc;
+            text-decoration:none;
+            transition: 0.3s;
+
+    </style>
+
 </body>
+<nav>
+
+    <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="60" height="60px" />
+        <h2 style="width: 100%;text-align: center; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: antiquewhite;"><i>DPL Autopsii & Organe vii</i></h2>
+
+    <div class="Navbar_Link">
+        <a href="#"><i>Casa</i></a>
+        <a href="#"><i>Despre</i></a>
+        <a href="#"><i>Contact</i></a>
+    </div>
+
+</nav>
 </html>
