--- a/index.html
+++ b/index.html
@@ -60,10 +60,10 @@
         <h2 style="width: 100%; text-align: center; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: antiquewhite;"><i>DPL Autopsii & Organe vii</i></h2>
 
         <div class="Navbar_Link">
-            <a href="#"><i>Produse</i></a>
-            <a href="#"><i>Locatie</i></a>
-            <a href="http://127.0.0.1:5500/DespreNoi.html"><i>Despre Noi</i></a>
-            <a href="#"><i>Contact</i></a>
+            <a href="Produse.html"><i>Produse</i></a>
+            <a href="DespreNoi.html"><i>Locatie</i></a>
+            <a href="Locatie.html"><i>Despre Noi</i></a>
+            <a href="Contact.html"><i>Contact</i></a>
         
 </nav>
 </body>
