--- a/Contact.html
+++ b/Contact.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Despre Noi - DPL Autopsii & Organe vii</title>
+    <title>Contact - DPL Autopsii & Organe vii</title>
     <style>
         body{
             width: 100%;
@@ -38,6 +38,7 @@
             color: #000;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         }
+
         .Navbar_Link a:hover{
             color: #ffbcbc;
             text-decoration: none;
@@ -66,22 +67,39 @@
             border-radius: 10px;
         }
 
-        .about-text{
+        .contact-text{
             font-size: 1.1em;
             line-height: 1.6;
+            text-align: center;
         }
 
-        .about-images{
+        .contact-form{
             display: flex;
-            justify-content: space-between;
-            gap: 20px;
-            margin-top: 20px;
+            flex-direction: column;
+            gap: 15px;
+            max-width: 600px;
+            margin: 0 auto;
         }
 
-        .about-images img{
-            width: 45%;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
+        .contact-form input,
+        .contact-form textarea{
+            padding: 10px;
+            font-size: 1rem;
+            border-radius: 5px;
+            border: 1px solid #ccc;
+            background-color: #333;
+            color: #fff;
+        }
+
+        .contact-form input[type="submit"]{
+            background-color: rgba(255, 0, 0, 0.8);
+            border: none;
+            cursor: pointer;
+            transition: background-color 0.3s;
+        }
+
+        .contact-form input[type="submit"]:hover{
+            background-color: rgba(255, 0, 0, 1);
         }
 
         footer{
@@ -93,7 +111,6 @@
             bottom: 0;
             width: 100%;
         }
-
     </style>
 </head>
 <body>
@@ -114,24 +131,17 @@
 </nav>
 
 <div class="content">
-    <h2>Despre Noi</h2>
-    <div class="about-text">
-        <p>
-            La DPL Autopsii & Organe vii, suntem o echipă dedicată în a oferi soluții inovative pentru cercetări avansate și intervenții medicale speciale. 
-            Povestea noastră începe cu Di Pietro Luca, un pacient care a decis să-și ofere organele pentru a ajuta la salvarea altor vieți, un gest de mare curaj și altruism.
-        </p>
-        <p>
-            Compania noastră a fost înființată cu scopul de a folosi aceste organe în scopuri științifice, cercetări medicale și pentru tratamente speciale. Totodată, în activitatea noastră, punem accent pe transparență și etică, respectând în totalitate toate reglementările legale, pentru a asigura cele mai bune practici de sănătate publică.
-        </p>
-        <p>
-            Ne străduim să oferim nu doar soluții medicale, dar și informații relevante despre proceduri, ce presupun donarea de organe și modul în care acestea pot salva vieți.
-        </p>
+    <h2>Contactează-ne</h2>
+    <div class="contact-text">
+        <p>Completează formularul de mai jos și te vom contacta cât mai curând posibil.</p>
     </div>
 
-    <div class="about-images">
-        <img src="https://via.placeholder.com/600x400/ff6666/fff?text=Di+Pietro+Luca" alt="Di Pietro Luca">
-        <img src="https://via.placeholder.com/600x400/ff6666/fff?text=Autopsie+si+Organe" alt="Autopsie si Organe">
-    </div>
+    <form class="contact-form" action="#" method="POST">
+        <input type="text" name="name" placeholder="Numele tău" required>
+        <input type="email" name="email" placeholder="Emailul tău" required>
+        <textarea name="message" rows="5" placeholder="Mesajul tău" required></textarea>
+        <input type="submit" value="Trimite mesajul">
+    </form>
 </div>
 
 <footer>
