--- a/Pg1 copy 2.html
+++ b/Pg1 copy 2.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Despre Noi - DPL Autopsii & Organe vii</title>
+    <title>Detalii Produs - DPL Autopsii & Organe vii</title>
     <style>
-        body{
+        body {
             width: 100%;
             height: 100vh;
             background-color: rgb(114, 16, 16);
@@ -15,7 +15,7 @@
             padding: 0;
         }
 
-        nav{
+        nav {
             background-color: rgba(255, 0, 0, 0.718);
             padding: 15px;
             margin: 5px 10px;
@@ -24,67 +24,87 @@
             display: flex;
             align-items: center;
             position: sticky;
-            top:5px;
+            top: 5px;
         }
 
-        .Navbar_Link{
+        .Navbar_Link {
             display: flex;
             justify-content: end;
             width: 100%;
             gap: 50px;
         }
 
-        .Navbar_Link a{
+        .Navbar_Link a {
             color: #000;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
         }
-        .Navbar_Link a:hover{
+
+        .Navbar_Link a:hover {
             color: #ffbcbc;
             text-decoration: none;
             transition: 0.3s;
             transform: scale(1.2);
         }
 
-        logoanimation img{
+        logoanimation img {
             transition: transform 0.4s;
         }
 
-        logoanimation img:hover{
+        logoanimation img:hover {
             transform: scale(1.2);
         }
 
-        h2{
+        h2 {
             color: antiquewhite;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
             text-align: center;
         }
 
-        .content{
+        .content {
             padding: 20px;
             margin: 20px;
             background-color: rgba(0, 0, 0, 0.8);
             border-radius: 10px;
         }
 
-        .about-text{
-            font-size: 1.1em;
-            line-height: 1.6;
-        }
-
-        .about-images{
+        .product-detail {
             display: flex;
-            justify-content: space-between;
-            gap: 20px;
+            justify-content: center;
+            gap: 30px;
+            align-items: center;
             margin-top: 20px;
         }
 
-        .about-images img{
-            width: 45%;
+        .product-image img {
+            width: 400px;
+            height: auto;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
 
-        footer{
+        .product-info {
+            max-width: 500px;
+        }
+
+        .product-info h3 {
+            color: #ffbcbc;
+            font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+        }
+
+        .product-info p {
+            color: #ccc;
+            font-size: 1.1rem;
+            line-height: 1.6;
+        }
+
+        .product-price {
+            font-size: 1.5em;
+            font-weight: bold;
+            color: #ff6666;
+            margin-top: 20px;
+        }
+
+        footer {
             text-align: center;
             background-color: #000;
             color: #fff;
@@ -93,7 +113,6 @@
             bottom: 0;
             width: 100%;
         }
-
     </style>
 </head>
 <body>
@@ -106,31 +125,34 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="Produse.html"><i>Produse</i></a>
-        <a href="DespreNoi.html"><i>Locatie</i></a>
-        <a href="Locatie.html"><i>Despre Noi</i></a>
-        <a href="Contact.html"><i>Contact</i></a>
+        <a href="index.html"><i>Produse</i></a>
+        <a href="location.html"><i>Locatie</i></a>
+        <a href="about.html"><i>Despre Noi</i></a>
+        <a href="contact.html"><i>Contact</i></a>
     </div>
 </nav>
 
 <div class="content">
-    <h2>Despre Noi</h2>
-    <div class="about-text">
-        <p>
-            La DPL Autopsii & Organe vii, suntem o echipă dedicată în a oferi soluții inovative pentru cercetări avansate și intervenții medicale speciale. 
-            Povestea noastră începe cu Di Pietro Luca, un pacient care a decis să-și ofere organele pentru a ajuta la salvarea altor vieți, un gest de mare curaj și altruism.
-        </p>
-        <p>
-            Compania noastră a fost înființată cu scopul de a folosi aceste organe în scopuri științifice, cercetări medicale și pentru tratamente speciale. Totodată, în activitatea noastră, punem accent pe transparență și etică, respectând în totalitate toate reglementările legale, pentru a asigura cele mai bune practici de sănătate publică.
-        </p>
-        <p>
-            Ne străduim să oferim nu doar soluții medicale, dar și informații relevante despre proceduri, ce presupun donarea de organe și modul în care acestea pot salva vieți.
-        </p>
-    </div>
-
-    <div class="about-images">
-        <img src="https://via.placeholder.com/600x400/ff6666/fff?text=Di+Pietro+Luca" alt="Di Pietro Luca">
-        <img src="https://via.placeholder.com/600x400/ff6666/fff?text=Autopsie+si+Organe" alt="Autopsie si Organe">
+    <h2>Detalii Produs</h2>
+    
+    <div class="product-detail">
+        <div class="product-image">
+            <!-- Imaginea produsului -->
+            <img src="https://via.placeholder.com/400x300/ff6666/fff?text=Produs+Exemplu" alt="Produs Exemplu">
+        </div>
+        <div class="product-info">
+            <!-- Informațiile despre produs -->
+            <h3>Produs Exemplu</h3>
+            <p>
+                Acesta este un exemplu de produs descris detaliat pentru a oferi mai multe informații celor interesați. Aici vor fi menționate caracteristicile produsului, cum ar fi utilitatea, beneficiile și orice altceva important pentru cumpărător.
+            </p>
+            <p>
+                Acesta este un produs de înaltă calitate, special creat pentru a ajuta la cercetări avansate și intervenții medicale. Utilizarea acestui produs garantează rezultate excelente.
+            </p>
+            <div class="product-price">
+                <span>Preț:</span> 500 RON
+            </div>
+        </div>
     </div>
 </div>
 
