--- a/Locatie.html
+++ b/Locatie.html
@@ -13,6 +13,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            overflow: hidden;
         }
 
         nav{
@@ -59,6 +60,7 @@
         }
 
         .content{
+            text-align-last: center;
             padding: 20px;
             margin: 20px;
             background-color: rgba(0, 0, 0, 0.8);
@@ -66,7 +68,6 @@
         }
 
         #map {
-            height: 400px;
             width: 100%;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
@@ -104,7 +105,8 @@
     <h2>Locatie</h2>
     <p>Vizitează-ne la locația noastră! Poți folosi harta interactivă de mai jos pentru a naviga.</p>
 
-    <!-- Google Map Embed -->
+    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2408.2916786368232!2d21.25134002010996!3d45.71556635922674!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sro!4v1741358404068!5m2!1sen!2sro" width="100%" height="400px"  loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    
     <div id="map"></div>
 </div>
 
@@ -112,33 +114,6 @@
     <p>&copy; 2025 DPL Autopsii & Organe vii | Toate drepturile rezervate</p>
 </footer>
 
-<!-- Google Maps API Script -->
-<script>
-    function initMap() {
-        // Create a map centered at a specific location
-        var location = { lat: 44.4268, lng: 26.1025 }; // Example: coordinates for Bucharest, Romania
-
-        // Create a new map object
-        var map = new google.maps.Map(document.getElementById("map"), {
-            zoom: 12, // Zoom level
-            center: location, // Set center of the map
-            mapTypeId: "roadmap", // Map type
-        });
-
-        // Add a marker at the specified location
-        var marker = new google.maps.Marker({
-            position: location,
-            map: map,
-            title: "DPL Autopsii & Organe vii",
-        });
-    }
-</script>
-
-<!-- Add Google Maps API link here (Replace YOUR_API_KEY with your actual API key) -->
-<script
-    src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY&callback=initMap&v=weekly"
-    async
-></script>
 
 </body>
 </html>
