--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
             width: 100%;
             height: 100vh;
             background-color: rgb(114, 16, 16);
+            overflow: hidden;
+
         }
 
         nav{
