--- a/DespreNoi.html
+++ b/DespreNoi.html
@@ -13,6 +13,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
             overflow: hidden;
 
         }
@@ -109,8 +110,8 @@
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
         <a href="Produse.html"><i>Produse</i></a>
-        <a href="DespreNoi.html"><i>Locatie</i></a>
-        <a href="Locatie.html"><i>Despre Noi</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
         <a href="Contact.html"><i>Contact</i></a>
     </div>
 </nav>
