--- a/Produse.html
+++ b/Produse.html
@@ -13,6 +13,7 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
+            overflow-x: hidden;
         }
 
         nav {
@@ -25,6 +26,7 @@
             align-items: center;
             position: sticky;
             top: 5px;
+            z-index: 99;
         }
 
         .Navbar_Link {
@@ -84,10 +86,10 @@
         }
 
         .product-card img {
-            width: 100%;
+            width: 100px;
             height: auto;
             border-radius: 10px;
-            max-height: 200px;
+            max-height: 100px;
         }
 
         .product-card h3 {
@@ -128,136 +130,136 @@
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
         <a href="Produse.html"><i>Produse</i></a>
-        <a href="DespreNoi.html"><i>Locatie</i></a>
-        <a href="Locatie.html"><i>Despre Noi</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
         <a href="Contact.html"><i>Contact</i></a>
     </div>
 </nav>
 
 <div class="content">
     <h2>Produse</h2>
-    <p style="text-align:center;">Descoperă produsele noastre inovative, fiecare având un rol important în cercetarea și tratamentele speciale.</p>
+    <p style="text-align:center;">Descoperă produsele noastre 100% legale</p>
 
     <div class="product-grid">
         <div class="product-card">
-            <img src="blob:https://web.whatsapp.com/f299492e-64a0-494e-81a9-0d6d814ce0a6">
-            <h3>Produs 1</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/508/508735.png">
+            <h3> DPL Inima</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+2" alt="Produs 2">
-            <h3>Produs 2</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/1787/1787077.png" alt="Produs 2">
+            <h3>DPL Creier</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+3" alt="Produs 3">
-            <h3>Produs 3</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/1834/1834842.png" alt="Produs 3">
+            <h3>DPL Plămâni</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/508/508747.png" alt="Produs 4">
+            <h3>DPL Ficat</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/508/508743.png" alt="Produs 4">
+            <h3>DPL Stomac</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/2117/2117087.png" alt="Produs 4">
+            <h3>DPL Rinichi Stâng </h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/2117/2117087.png" alt="Produs 4">
+            <h3>DPL Rinichi Drept</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/3912/3912415.png" alt="Produs 4">
+            <h3>DPL Intestin subțire</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/2864/2864302.png" alt="Produs 4">
+            <h3>DPL Intestin gros</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/2864/2864329.png" alt="Produs 4">
+            <h3>DPL Pancreas</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/6469/6469817.png" alt="Produs 4">
+            <h3>DPL Ochi Stâng</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/6469/6469817.png" alt="Produs 4">
+            <h3>DPL Ochi Drept</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/7671/7671689.png" alt="Produs 4">
+            <h3>DPL Urechi</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/2309/2309032.png" alt="Produs 4">
+            <h3>DPL Nas</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/5018/5018733.png" alt="Produs 4">
+            <h3>DPL Limbă</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/4148/4148611.png" alt="Produs 4">
+            <h3>DPL Piele</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/2309/2309124.png" alt="Produs 4">
+            <h3>DPL Glandă tiroidă</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" alt="Produs 4">
+            <h3>DPL Testicule</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" alt="Produs 4">
+            <h3>DPL Glandă prostatică</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" alt="Produs 4">
+            <h3>DPL Penis</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/18163/18163858.png" alt="Produs 4">
+            <h3>DPL Esofag</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/7292/7292470.png" alt="Produs 4">
+            <h3>DPL Vezică biliară</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/11354/11354749.png" alt="Produs 4">
+            <h3>DPL Vezică urinară</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/8670/8670755.png" alt="Produs 4">
+            <h3>DPL Amigdale</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/9265/9265805.png" alt="Produs 4">
+            <h3>DPL Diafragmă</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/7350/7350760.png" alt="Produs 4">
+            <h3>DPL Apendice</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/10165/10165868.png" alt="Produs 4">
+            <h3>DPL Măduva osoasă</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/3817/3817018.png" alt="Produs 4">
+            <h3>DPL Timus</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/7292/7292533.png" alt="Produs 4">
+            <h3>DPL Ganglioni limfatici</h3>
         </div>
         <div class="product-card">
-            <img src="https://via.placeholder.com/300x200/ff6666/fff?text=Produs+4" alt="Produs 4">
-            <h3>Produs 4</h3>
+            <img src="https://cdn-icons-png.flaticon.com/128/6432/6432060.png" alt="Produs 4">
+            <h3>DPL Glande suprarenale</h3>
         </div>
 
 
