--- a/Contact.html
+++ b/Contact.html
@@ -14,6 +14,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            overflow-x: hidden;
 
         }
 
@@ -126,8 +127,8 @@
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
         <a href="Produse.html"><i>Produse</i></a>
-        <a href="DespreNoi.html"><i>Locatie</i></a>
-        <a href="Locatie.html"><i>Despre Noi</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
         <a href="Contact.html"><i>Contact</i></a>
     </div>
 </nav>
