--- a/Locatie.html
+++ b/Locatie.html
@@ -14,6 +14,7 @@
             margin: 0;
             padding: 0;
             overflow: hidden;
+            overflow-x: hidden;
         }
 
         nav{
@@ -94,10 +95,10 @@
     </logoanimation>
     <h2><i>DPL Autopsii & Organe vii</i></h2>
     <div class="Navbar_Link">
-        <a href="index.html"><i>Produse</i></a>
-        <a href="location.html"><i>Locatie</i></a>
-        <a href="about.html"><i>Despre Noi</i></a>
-        <a href="contact.html"><i>Contact</i></a>
+        <a href="Produse.html"><i>Produse</i></a>
+        <a href="Locatie.html"><i>Locatie</i></a>
+        <a href="DespreNoi.html"><i>Despre Noi</i></a>
+        <a href="Contact.html"><i>Contact</i></a>
     </div>
 </nav>
 
