--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ro">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Casa</title>
+    <title>Casa - DPL Autopsii & Organe vii</title>
     <style>
-        body{
+        body {
             width: 100%;
             height: 100vh;
             background-color: rgb(114, 16, 16);
-            overflow: hidden;
-
+            overflow-x: hidden;
+            margin: 0;
+            padding: 0;
+            font-family: Arial, sans-serif;
+            color: white;
         }
-
-        nav{
+        
+        nav {
             background-color: rgba(255, 0, 0, 0.718);
             padding: 15px;
             margin: 5px 10px;
@@ -22,51 +25,144 @@
             display: flex;
             align-items: center;
             position: sticky;
-            top:5px;
+            top: 5px;
+            z-index: 1000;
         }
 
-        .Navbar_Link{
+        .Navbar_Link {
             display: flex;
             justify-content: end;
             width: 100%;
             gap: 50px;
         }
 
-        .Navbar_Link a{
+        .Navbar_Link a {
             color: #000;
             font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
-        }
-        .Navbar_Link a:hover{
-            color: #ffbcbc;
             text-decoration: none;
+        }
+
+        .Navbar_Link a:hover {
+            color: #ffbcbc;
             transition: 0.3s;
             transform: scale(1.2);
         }
 
-        logoanimation img{
+        .logo img {
             transition: transform 0.4s;
         }
 
-        logoanimation img:hover{
+        .logo img:hover {
             transform: scale(1.2);
+        }
+
+        .container {
+            text-align: center;
+            padding: 40px;
+        }
+
+        .container img {
+            width: 80%;
+            max-width: 600px;
+            border-radius: 10px;
+            margin-top: 20px;
+        }
+
+        .description {
+            font-size: 18px;
+            margin-top: 20px;
+            max-width: 800px;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .team {
+            display: flex;
+            justify-content: center;
+            gap: 100px;
+            margin-top: 40px;
+            padding-bottom: 40px;
+        }
+
+        .team-member {
+            text-align: center;
+        }
+
+        .team-member img {
+            width: 150px;
+            height: 150px;
+            border-radius: 50%;
+            object-fit: cover;
+        }
+
+        .team-member p {
+            margin-top: 10px;
+            font-size: 16px;
+            color: antiquewhite;
+        }
+        footer{
+            text-align: center;
+            background-color: #000;
+            color: #fff;
+            padding: 10px;
+            position: relative;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-<nav>
-    <logoanimation>
-        <a href="http://127.0.0.1:5500/index.html" >
-            <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="60" height="60px" />
-        </a>
-    </logoanimation>
+    <nav>
+        <div class="logo">
+            <a href="index.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/84/84390.png" width="60" height="60px" />
+            </a>
+        </div>
         <h2 style="width: 100%; text-align: center; font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; color: antiquewhite;"><i>DPL Autopsii & Organe vii</i></h2>
-
         <div class="Navbar_Link">
             <a href="Produse.html"><i>Produse</i></a>
-            <a href="DespreNoi.html"><i>Locatie</i></a>
-            <a href="Locatie.html"><i>Despre Noi</i></a>
+            <a href="Locatie.html"><i>Locație</i></a>
+            <a href="DespreNoi.html"><i>Despre Noi</i></a>
             <a href="Contact.html"><i>Contact</i></a>
-        
-</nav>
+        </div>
+    </nav>
+
+    <div class="container">
+        <h1>Bine ați venit la DPL Autopsii & Organe vii</h1>
+        <img src="./WhatsApp Image 2025-03-19 at 21.56.41.jpeg">
+        <p  style="font-family: fantasy; color: antiquewhite;" class="description">
+            Suntem dedicați oferirii celor mai bune servicii în domeniul nostru. 
+            Descoperiți gama noastră de produse și aflați mai multe despre activitatea noastră.
+        </p>
+        <p style="font-family: fantasy;" class="description">
+            Toate produsele noastre vin de la un donator dedicat numit Luca Di Pietro, un tânăr din Timișoara a cărui plăcere este salvarea vieții altora.
+        </p>
+        <img src="./WhatsApp Image 2025-03-19 at 22.15.08.jpeg">
+        <p style="font-family: fantasy;" class="description">
+            Cu o echipă de profesioniști și tehnologii de ultimă generație, 
+            vă garantăm servicii de calitate și profesionalism.
+        </p>
+    </div>
+
+    <div class="container">
+        <h2>Echipa noastră principala</h2>
+        <div class="team">
+            <div class="team-member">
+                <img src="./man-silhouette-icon-question-mark-260nw-192704537.webp" alt="Membru echipă 1">
+                <p>Anonim - Fundatorul DPL Autopsii & Organe vii </p>
+            </div>
+            <div class="team-member">
+                <img src="./WhatsApp Image 2025-03-19 at 22.25.03.jpeg" alt="Membru echipă 2">
+                <p>Di Pietro Luca - Cobaiul experimentelor și produselor noastre.</p>
+            </div>
+            <div class="team-member">
+                <img src="./WhatsApp Image 2025-03-19 at 22.25.48.jpeg" alt="Membru echipă 3">
+                <p>Tudorescu Robert- Agent de vânzări </p>
+            </div>
+        </div>
+    </div>
+    <footer>
+        <p>&copy; 2025 DPL Autopsii & Organe vii | Toate drepturile rezervate</p>
+    </footer>
 </body>
 </html>
