--- a/DespreNoi.html
+++ b/DespreNoi.html
@@ -82,7 +82,7 @@
         }
 
         .about-images img{
-            width: 45%;
+            height: 130px;
             border-radius: 10px;
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
@@ -132,8 +132,9 @@
     </div>
 
     <div class="about-images">
-        <img src="https://via.placeholder.com/600x400/ff6666/fff?text=Di+Pietro+Luca" alt="Di Pietro Luca">
-        <img src="https://via.placeholder.com/600x400/ff6666/fff?text=Autopsie+si+Organe" alt="Autopsie si Organe">
+        <img src="./WhatsApp Image 2025-03-21 at 16.51.58.jpeg" height="130px">
+        <img src="./WhatsApp Image 2025-03-21 at 16.49.33.jpeg" height="130px">
+
     </div>
 </div>
 
