--- a/DespreNoi.html
+++ b/DespreNoi.html
@@ -87,13 +87,13 @@
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
         }
 
-        footer{
+        footer {
             text-align: center;
             background-color: #000;
             color: #fff;
             padding: 10px;
             position: relative;
-            bottom: 0;
+            margin-top: 100px;
             width: 100%;
         }
 
