--- a/Ganglioni Limfattici.html
+++ b/Ganglioni Limfattici.html
@@ -110,8 +110,25 @@
             color: #fff;
             padding: 10px;
             position: relative;
-            bottom: 0;
+            margin-top: 100px;
             width: 100%;
+        }
+        .buton {
+            display: inline-block;
+            background-color: #8b0000;
+            color: white;
+            padding: 10px 20px;
+            font-size: 1.2em;
+            border: none;
+            border-radius: 5px;
+            margin-top: 15px;
+            cursor: pointer;
+            transition: 0.3s;
+        }
+
+        .buton:hover {
+            background-color: #ff4d4d;
+            transform: scale(1.1);
         }
     </style>
 </head>
@@ -133,26 +150,26 @@
 </nav>
 
 <div class="content">
-    <h2>Detalii Produs</h2>
+    <h2>Ganglionii limfatici A Lui Di Pietr</h2>
     
     <div class="product-detail">
         <div class="product-image">
-            <img src="https://via.placeholder.com/400x300/ff6666/fff?text=Produs+Exemplu" alt="Produs Exemplu">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcRQiZ1j5H5eakLZxN45pV4UhgFT2qBhPZkWHw&s">
         </div>
         <div class="product-info">
-            <h3>Produs Exemplu</h3>
+            <h3>Descriere</h3>
             <p>
-                Acesta este un exemplu de produs descris detaliat pentru a oferi mai multe informații celor interesați. Aici vor fi menționate caracteristicile produsului, cum ar fi utilitatea, beneficiile și orice altceva important pentru cumpărător.
-            </p>
-            <p>
-                Acesta este un produs de înaltă calitate, special creat pentru a ajuta la cercetări avansate și intervenții medicale. Utilizarea acestui produs garantează rezultate excelente.
+                Ganglionii limfatici perfecți care filtreaza eficient limfa, eliminând toxinele, agenții patogeni și celulele anormale din organism. Ar produce și activa limfocite, menținând un sistem imunitar puternic și capabil să reacționeze rapid la infecții. În plus, ar rămâne sănătoși și fără inflamații, prevenind umflăturile și alte disfuncții ale sistemului limfatic.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 500 RON
+                <span>Preț:</span> 70.000 RON
             </div>
+            <button class="buton" onclick="onclick=addToCart({ id: 'produs7', name: 'Ganglioni Limfatici', price: 70000 })">Cumpără</button>
+
         </div>
     </div>
 </div>
+<script src="script.js"></script>
 
 <footer>
     <p>&copy; 2025 DPL Autopsii & Organe vii | Toate drepturile rezervate</p>
