--- a/Inima.html
+++ b/Inima.html
@@ -103,7 +103,6 @@
             color: #ff6666;
             margin-top: 20px;
         }
-
         footer {
             text-align: center;
             background-color: #000;
@@ -133,22 +132,19 @@
 </nav>
 
 <div class="content">
-    <h2>Detalii Produs</h2>
+    <h2>Inima Lui Di Pietro</h2>
     
     <div class="product-detail">
         <div class="product-image">
-            <img src="https://via.placeholder.com/400x300/ff6666/fff?text=Produs+Exemplu" alt="Produs Exemplu">
+            <img src="https://t3.ftcdn.net/jpg/03/01/66/92/360_F_301669230_aBC6Blk7VSKAc8tlicySlusSjcuCTXTu.jpg">
         </div>
         <div class="product-info">
-            <h3>Produs Exemplu</h3>
+            <h3>Descriere</h3>
             <p>
-                Acesta este un exemplu de produs descris detaliat pentru a oferi mai multe informații celor interesați. Aici vor fi menționate caracteristicile produsului, cum ar fi utilitatea, beneficiile și orice altceva important pentru cumpărător.
-            </p>
-            <p>
-                Acesta este un produs de înaltă calitate, special creat pentru a ajuta la cercetări avansate și intervenții medicale. Utilizarea acestui produs garantează rezultate excelente.
+                O inimă perfectă care bate ritmic și puternic, asigurând un flux constant de sânge oxigenat către toate organele. Lipsită de orice afecțiune, având vase sănătoase, valve impecabile și o musculatură capabilă să susțină efortul fără probleme. În plus, reflecta o stare interioară echilibrată, pulsând nu doar sânge, ci și armonie între trup și suflet.            
             </p>
             <div class="product-price">
-                <span>Preț:</span> 500 RON
+                <span>Preț:</span> PRICELESS
             </div>
         </div>
     </div>
@@ -157,6 +153,6 @@
 <footer>
     <p>&copy; 2025 DPL Autopsii & Organe vii | Toate drepturile rezervate</p>
 </footer>
-
+<script src="script.js"></script>
 </body>
 </html>
