--- a/Locatie.html
+++ b/Locatie.html
@@ -13,7 +13,6 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            overflow: hidden;
             overflow-x: hidden;
         }
 
@@ -106,8 +105,7 @@
     <h2>Locatie</h2>
     <p>Vizitează-ne la locația noastră! Poți folosi harta interactivă de mai jos pentru a naviga.</p>
 
-    <iframe src="https://www.google.com/maps/embed?pb=!1m10!1m8!1m3!1d2408.2916786368232!2d21.25134002010996!3d45.71556635922674!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sro!4v1741358404068!5m2!1sen!2sro" width="100%" height="400px"  loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-    
+    <iframe width="100%" height="600px" frameborder="0" allowfullscreen allow="geolocation" src="//umap.openstreetmap.fr/en/map/untitled-map_1195870?scaleControl=false&miniMap=false&scrollWheelZoom=false&zoomControl=true&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=true"></iframe><p><a href="//umap.openstreetmap.fr/en/map/untitled-map_1195870?scaleControl=false&miniMap=false&scrollWheelZoom=true&zoomControl=true&editMode=disabled&moreControl=true&searchControl=null&tilelayersControl=null&embedControl=null&datalayersControl=true&onLoadPanel=none&captionBar=false&captionMenus=true">See full screen</a></p>    
     <div id="map"></div>
 </div>
 
