--- a/Produse.html
+++ b/Produse.html
@@ -98,10 +98,10 @@
             margin: 10px 0;
         }
 
-        .product-card p {
-            color: #ccc;
-            font-size: 1rem;
-            line-height: 1.4;
+        .product-card a {
+            text-decoration: none;
+            color: inherit;
+            display: block;
         }
 
         .product-card:hover {
@@ -142,127 +142,188 @@
 
     <div class="product-grid">
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/508/508735.png">
-            <h3> DPL Inima</h3>
+            <a href="inima.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/508/508735.png">
+                <h3>DPL Inima</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/1787/1787077.png" alt="Produs 2">
-            <h3>DPL Creier</h3>
+            <a href="creier.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/1787/1787077.png">
+                <h3>DPL Creier</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/1834/1834842.png" alt="Produs 3">
-            <h3>DPL Plămâni</h3>
+            <a href="plamani.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/1834/1834842.png">
+                <h3>DPL Plămâni</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/508/508747.png" alt="Produs 4">
-            <h3>DPL Ficat</h3>
+            <a href="ficat.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/508/508747.png">
+                <h3>DPL Ficat</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/508/508743.png" alt="Produs 4">
-            <h3>DPL Stomac</h3>
+            <a href="stomac.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/508/508743.png">
+                <h3>DPL Stomac</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/2117/2117087.png" alt="Produs 4">
-            <h3>DPL Rinichi Stâng </h3>
+            <a href="./Rinichi Stang.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/2117/2117087.png" >
+                <h3>DPL Rinichi Stâng</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/2117/2117087.png" alt="Produs 4">
-            <h3>DPL Rinichi Drept</h3>
+            <a href="./Rinichi Drept.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/2117/2117087.png" >
+                <h3>DPL Rinichi Drept</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/3912/3912415.png" alt="Produs 4">
-            <h3>DPL Intestin subțire</h3>
+            <a href="./Intestin Subtire.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/3912/3912415.png" >
+                <h3>DPL Intestin subțire</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/2864/2864302.png" alt="Produs 4">
-            <h3>DPL Intestin gros</h3>
+            <a href="./Intestinul Gros.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/2864/2864302.png" >
+                <h3>DPL Intestin gros</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/2864/2864329.png" alt="Produs 4">
-            <h3>DPL Pancreas</h3>
+            <a href="./Pancreas.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/2864/2864329.png" >
+                <h3>DPL Pancreas</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/6469/6469817.png" alt="Produs 4">
-            <h3>DPL Ochi Stâng</h3>
+            <a href="./Ochi Stang.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/6469/6469817.png" >
+                <h3>DPL Ochi Stâng</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/6469/6469817.png" alt="Produs 4">
-            <h3>DPL Ochi Drept</h3>
+            <a href="./Ochi Drept.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/6469/6469817.png" >
+                <h3>DPL Ochi Drept</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/7671/7671689.png" alt="Produs 4">
-            <h3>DPL Urechi</h3>
+            <a href="./Urechi.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/7671/7671689.png" >
+                <h3>DPL Urechi</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/2309/2309032.png" alt="Produs 4">
-            <h3>DPL Nas</h3>
+            <a href="./Nas.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/2309/2309032.png" >
+                <h3>DPL Nas</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/5018/5018733.png" alt="Produs 4">
-            <h3>DPL Limbă</h3>
+            <a href="./Limba.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/5018/5018733.png" >
+                <h3>DPL Limbă</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/4148/4148611.png" alt="Produs 4">
-            <h3>DPL Piele</h3>
+            <a href="./Piele.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/4148/4148611.png" >
+                <h3>DPL Piele</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/2309/2309124.png" alt="Produs 4">
-            <h3>DPL Glandă tiroidă</h3>
+            <a href="./Glanda Tiroida.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/2309/2309124.png" >
+                <h3>DPL Glandă tiroidă</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" alt="Produs 4">
-            <h3>DPL Testicule</h3>
+            <a href="./Testicule.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" >
+                <h3>DPL Testicule</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" alt="Produs 4">
-            <h3>DPL Glandă prostatică</h3>
+            <a href="./Glanda Proststica.html">
+                <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" >
+                <h3>DPL Glandă prostatică</h3>
+            </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" alt="Produs 4">
+            <a href="./Penis.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/17569/17569008.png" >
             <h3>DPL Penis</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/18163/18163858.png" alt="Produs 4">
+            <a href="./Esofag.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/18163/18163858.png" >
             <h3>DPL Esofag</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/7292/7292470.png" alt="Produs 4">
+            <a href="./Vezica Biliara.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/7292/7292470.png" >
             <h3>DPL Vezică biliară</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/11354/11354749.png" alt="Produs 4">
+            <a href="./Vezica Urinara.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/11354/11354749.png" >
             <h3>DPL Vezică urinară</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/8670/8670755.png" alt="Produs 4">
+            <a href="./Amigdale.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/8670/8670755.png" >
             <h3>DPL Amigdale</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/9265/9265805.png" alt="Produs 4">
+            <a href="./Diafragma.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/9265/9265805.png" >
             <h3>DPL Diafragmă</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/7350/7350760.png" alt="Produs 4">
+            <a href="./Apendice.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/7350/7350760.png" >
             <h3>DPL Apendice</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/10165/10165868.png" alt="Produs 4">
+            <a href="./Maduva Osoasa.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/10165/10165868.png" >
             <h3>DPL Măduva osoasă</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/3817/3817018.png" alt="Produs 4">
+            <a href="./Timus.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/3817/3817018.png" >
             <h3>DPL Timus</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/7292/7292533.png" alt="Produs 4">
+            <a href="./Ganglioni Limfattici.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/7292/7292533.png" >
             <h3>DPL Ganglioni limfatici</h3>
+        </a>
         </div>
         <div class="product-card">
-            <img src="https://cdn-icons-png.flaticon.com/128/6432/6432060.png" alt="Produs 4">
+            <a href="./Glandele Suprarenale.html">
+            <img src="https://cdn-icons-png.flaticon.com/128/6432/6432060.png" >
             <h3>DPL Glande suprarenale</h3>
+        </a>
         </div>
+        
 
-
+        
     </div>
 </div>
 
